--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Deobfuscate Lua Script</title>
+    <title>Deobfuscate AdvanceFalling Scripts</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Deobfuscate Lua Script</h1>
+        <h1>AdvanceFalling Deobfuscator</h1>
         <form id="deobfuscateForm">
             <label for="obfuscatedScript">Enter Obfuscated Script:</label>
             <textarea id="obfuscatedScript" name="obfuscatedScript" rows="10" cols="50" required></textarea>
@@ -20,5 +20,8 @@
         </div>
     </div>
     <script src="script.js"></script>
+<footer>
+    Made By Star2
+</footer>
 </body>
 </html>
