--- a/index.html
+++ b/index.html
@@ -3,25 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Deobfuscate AdvanceFalling Scripts</title>
+    <title>Deobfuscate AdvanceFalling Script</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>AdvanceFalling Deobfuscator</h1>
+        <h1>Loadstring Decryptor</h1>
         <form id="deobfuscateForm">
-            <label for="obfuscatedScript">Enter Obfuscated Script:</label>
-            <textarea id="obfuscatedScript" name="obfuscatedScript" rows="10" cols="50" required></textarea>
-            <button type="submit">Deobfuscate</button>
+            <label for="obfuscatedScript">Enter your Lua script:</label>
+            <textarea id="obfuscatedScript" name="obfuscatedScript" rows="10" placeholder="Enter Lua script here..." required></textarea>
+            <button type="submit">Decrypt</button>
         </form>
         <div id="result">
-            <h2>Deobfuscated Script:</h2>
+            <h2>Decrypted Script:</h2>
             <pre id="deobfuscatedScript"></pre>
+            <button id="copyButton">Copy to Clipboard</button>
         </div>
     </div>
     <script src="script.js"></script>
-<footer>
-    Made By Star2
-</footer>
 </body>
 </html>
