--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Loadstring Decryptor</h1>
+        <h1>AdvanceFalling gay sex</h1>
         <form id="deobfuscateForm">
             <label for="obfuscatedScript">Enter your Lua script:</label>
             <textarea id="obfuscatedScript" name="obfuscatedScript" rows="10" placeholder="Enter Lua script here..." required></textarea>
