--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <form id="deobfuscateForm">
             <label for="obfuscatedScript">Enter your Lua script:</label>
             <textarea id="obfuscatedScript" name="obfuscatedScript" rows="10" placeholder="Enter Lua script here..." required></textarea>
-            <button type="submit">Decrypt</button>
+            <button type="submit">Deobfuscate</button>
         </form>
         <div id="result">
-            <h2>Decrypted Script:</h2>
+            <h2>Deobfucated Script:</h2>
             <pre id="deobfuscatedScript"></pre>
             <button id="copyButton">Copy to Clipboard</button>
         </div>
